--- a/.github/workflows/codeql-analysis.yml
+++ b/.github/workflows/codeql-analysis.yml
@@ -64,7 +64,7 @@ jobs:
     #    uses a compiled language
 
     - run: |
-       javac Main
+       javac Main.java
     #   make release
 
     - name: Perform CodeQL Analysis
